--- a/alphabeta-dqn.ipynb
+++ b/alphabeta-dqn.ipynb
@@ -723,8 +723,8 @@
     "        model expects ROWS x COLUMNS image (1-dimensional)\n",
     "        \"\"\"\n",
     "        super(ConnectXModel, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 16, kernel_size=4)   # 16 filters\n",
-    "        self.conv2 = nn.Conv2d(16, 512, kernel_size=3) # 32 filters\n",
+    "        self.conv1 = nn.Conv2d(1, 16, kernel_size=4)   \n",
+    "        self.conv2 = nn.Conv2d(16, 512, kernel_size=3) \n",
     "        # resulting rows x cols x out_channel where: rows (resp. cols) = ROWS (resp. COLUMNS) - k1 + 1 - k2 + 1, filters = 16x32\n",
     "        self.fc1 = nn.Linear((ROWS - 5) * (COLUMNS - 5) * 512, 256)\n",
     "        self.fc2 = nn.Linear(256, COLUMNS)        \n",
