--- a/alphabeta-dqn.ipynb
+++ b/alphabeta-dqn.ipynb
@@ -720,7 +720,7 @@
     "class ConnectXModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        \"\"\"\n",
-    "        model expects ROWS x COLUMNS image (1-dimensional)\n",
+    "        model expects ROWS x COLUMNS image (1-channel)\n",
     "        \"\"\"\n",
     "        super(ConnectXModel, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 16, kernel_size=4)   \n",
